--- a/X_scraper.ipynb
+++ b/X_scraper.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "def log_driver(driver):\n",
-    "    USERNAME=\"@ghorbel_ya28664\"\n",
-    "    PASSWORD= \"YEssinCSS44@\"\n",
+    "    USERNAME=\"@ghorbel\"\n",
+    "    PASSWORD= \"......\"\n",
     "    driver.get(\"https://twitter.com/login\")\n",
     "\n",
     "# Wait for page to load\n",
